clean up css after merges and fix header z-index

--- a/app/assets/stylesheets/shared/datatables.scss
+++ b/app/assets/stylesheets/shared/datatables.scss
@@ -1,5 +1,31 @@
 .dataTables_wrapper {
+  overflow: hidden;
+
   .dataTable {
+    margin-top: 0 !important;
+
+    .column-actions {
+      text-align: right;
+      min-width: 8rem;
+
+      a {
+        visibility: hidden;
+
+        &:first-of-type{
+          padding-right: 0.5rem;
+        }
+      }
+    }
+
+    .hide-sort {
+      pointer-events: none;
+
+      &:after,
+      &:before {
+        display: none;
+      }
+    }
+
     tbody {
       tr {
         .select-checkbox {
@@ -12,6 +38,7 @@
             width: var(--checkboxSize);
 
           }
+
           &:after {
             background-position-y: center;
             background-position-x: -2.4px;
@@ -60,77 +87,6 @@
         }
       }
     }
-  }
-  .dt-button-collection  {
-    .dropdown-item {
-      background-color: $white;
-      color: $linkColor;
-      font-size: 0.9rem;
-      font-weight: 300;
-      padding-left: 2.25rem;
-      position: relative;
-      transition: color 0s;
-
-      &.active {
-        background-color: $white;
-        color: $linkColor;
-
-        &::before {
-          background-color: $checkboxFill;
-          background-image: image-url('check.svg');
-          border-color: $checkboxFill;
-        }
-      }
-
-      &::before {
-        --checkboxSize: 13px;
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: 130%;
-        border: 1px solid $defaultText;
-        border-radius: 2px;
-        content: '';
-        height: var(--checkboxSize);
-        left: 1rem;
-        position: absolute;
-        top: calc(50% - (var(--checkboxSize)/2));
-        width: var(--checkboxSize);
-      }
-
-      &:focus,
-      &:hover {
-        color: $linkColorHover;
-        background-color: $dropdownLinkBackgroundHover;
-        outline: none;
-      }
-    }
-  }
-
-  overflow: hidden;
-
-  .dataTable {
-    margin-top: 0 !important;
-
-    .column-actions {
-      text-align: right;
-      min-width: 8rem;
-
-      a {
-        visibility: hidden;
-
-        &:first-of-type{
-          padding-right: 0.5rem;
-        }
-      }
-    }
-
-    .hide-sort {
-      pointer-events: none;
-      &:after,
-      &:before {
-        display: none;
-      }
-    }
 
     thead {
       th {
@@ -140,6 +96,7 @@
         top: 0;
         vertical-align: middle;
         white-space: nowrap;
+        z-index: 1;
 
         &:last-of-type{
           clip-path: inset(0px 0px -20px -1px);
@@ -234,6 +191,51 @@
         .pagination {
           margin-top: 1.5rem;
         }
+      }
+    }
+  }
+
+  .dt-button-collection  {
+    .dropdown-item {
+      background-color: $white;
+      color: $linkColor;
+      font-size: 0.9rem;
+      font-weight: 300;
+      padding-left: 2.25rem;
+      position: relative;
+      transition: color 0s;
+
+      &.active {
+        background-color: $white;
+        color: $linkColor;
+
+        &::before {
+          background-color: $checkboxFill;
+          background-image: image-url('check.svg');
+          border-color: $checkboxFill;
+        }
+      }
+
+      &::before {
+        --checkboxSize: 13px;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 130%;
+        border: 1px solid $defaultText;
+        border-radius: 2px;
+        content: '';
+        height: var(--checkboxSize);
+        left: 1rem;
+        position: absolute;
+        top: calc(50% - (var(--checkboxSize)/2));
+        width: var(--checkboxSize);
+      }
+
+      &:focus,
+      &:hover {
+        color: $linkColorHover;
+        background-color: $dropdownLinkBackgroundHover;
+        outline: none;
       }
     }
   }
